fix(project): fix hydration errors, button errors, and favicon not showing up right

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,9 +1,9 @@
 body {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   background-color: rgb(24, 24, 24);
@@ -12,7 +12,7 @@ body {
 
 html {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
   background-color: rgb(24, 24, 24);
   overscroll-behavior: none;
@@ -20,6 +20,6 @@ html {
 
 // Ensure no white space appears anywhere
 html, body, #__next {
-  min-height: 100%;
+  min-height: 100vh;
   background-color: rgb(24, 24, 24);
 }
